# Project4

./: CMakeCache.txt  CMakeLists.txt  Makefile  Matrix.c  Matrix.h  a.out  calculate.c  cmake_install.cmake  innerTools.c  innerTools.h  proMul.c  simest.c  test  test.c
TestCuda/: CMakeLists.txt  main.cu
